// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Extension should render prop data 1`] = `
<div
  aria-label="my text"
  className="extension"
  data-item-show-focus={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="extension-inner"
  >
    <div
      className="extension-image"
    >
      <span>
        my icon
      </span>
    </div>
    <ExtensionCount
      className="extension-count"
      value={1}
    />
  </div>
</div>
`;

exports[`Extension should render with function callbacks 1`] = `
<div
  aria-label="my text"
  className="extension"
  data-item-show-focus={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="extension-inner"
  >
    <div
      className="extension-image"
    >
      <span>
        my icon
      </span>
    </div>
  </div>
</div>
`;

exports[`Extension should render with required prop data 1`] = `
<div
  aria-label="my text"
  className="extension"
  data-item-show-focus={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="extension-inner"
  >
    <div
      className="extension-image"
    >
      <span>
        my icon
      </span>
    </div>
  </div>
</div>
`;

exports[`Extension should render with selection callback 1`] = `
<div
  aria-label="my text"
  className="extension"
  data-item-show-focus={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="extension-inner"
  >
    <div
      className="extension-image"
    >
      <span>
        my icon
      </span>
    </div>
  </div>
</div>
`;
